# advent-of-code-2024

./: .editorconfig  .gitignore  README.md  pyproject.toml
src/aoc2024/: __main__.py
src/aoc2024/commands/: common.py  download.py  new.py  readme.py  run.py  watch.py
src/aoc2024/days/day01/: part1.py  part2.py
src/aoc2024/days/day02/: part1.py  part2.py
src/aoc2024/days/day03/: part1.py  part2.py
src/aoc2024/days/day04/: part1.py  part2.py
src/aoc2024/days/day05/: part1.py  part2.py
src/aoc2024/days/day06/: part1.py  part2.py
src/aoc2024/days/day07/: part1.py  part2.py
src/aoc2024/days/day08/: part1.py  part2.py
src/aoc2024/days/day09/: part1.py  part2.py
src/aoc2024/days/day10/: part1.py  part2.py
src/aoc2024/days/day11/: part1.py  part2.py
src/aoc2024/days/day12/: part1.py  part2.py
src/aoc2024/days/day13/: part1.py  part2.py
src/aoc2024/days/day14/: part1.py  part2.py
src/aoc2024/days/day15/: part1.py  part2.py
src/aoc2024/days/day16/: part1.py  part2.py
src/aoc2024/days/day17/: part1.py  part2.py
src/aoc2024/days/day18/: part1.py  part2.py
src/aoc2024/days/day19/: part1.py  part2.py
src/aoc2024/days/day20/: part1.py  part2.py
src/aoc2024/days/day21/: part1.py  part2.py
src/aoc2024/days/day22/: part1.py  part2.py
src/aoc2024/days/day23/: part1.py  part2.py
src/aoc2024/days/day24/: part1.py  part2.py
src/aoc2024/days/day25/: part1.py
